tests/mapped_types/mapped_types.exp
Error -------------------------------------------------------------------------------------------- not_supported.js:2:11

Mapped Types are not yet supported. [unsupported-syntax]

   2| type X = {[key in keyof O]: number}; // ERROR mapped types not yet supported
                ^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- not_supported.js:2:12

Internal error: expected env entry for write location(2, 11) to (2, 14)

   2| type X = {[key in keyof O]: number}; // ERROR mapped types not yet supported
                 ^^^



Found 2 errors
